:wrench: Fix alignment in TitleBar children

--- a/app/components/TitleBar/TitleBar.scss
+++ b/app/components/TitleBar/TitleBar.scss
@@ -15,6 +15,8 @@
     }
 
     &__children {
+        display: flex;
+
         .btn + .btn { margin-left: 0.5em; }
     }
 }
